--- a/ServisiFront/src/app/components/userComponent/model-vozila/prikaz-modela-vozila/prikaz-modela-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/model-vozila/prikaz-modela-vozila/prikaz-modela-vozila.component.html
@@ -13,9 +13,10 @@
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Naziv modela</th>
-            <th scope="col">Marka vozila</th>
-            <th scope="col">Obrisi marku</th>
+            <th scope="col">Naziv modela vozila</th>
+            <th scope="col">Marka vozila vozila</th>
+            <th scope="col">Brisanje modela vozila</th>
+            <th scope="col">Izmena modela vozila</th>
           </tr>
         </thead>
         <tbody>
@@ -24,6 +25,7 @@
             <td>{{ model.naziv }}</td>
             <td>{{ model.id_marke }}</td>
             <td><button class="btn btn-danger" (click)="deleteModel(model)">Obrisi model vozila</button></td>
+            <td><button class="btn boja" (click)="izmenaModela(model)">Izmeni model vozila</button></td>
           </tr>
         </tbody>
       </table>
