--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -19,7 +19,7 @@
 
 
       <button class="dugmeLista"  mat-button [matMenuTriggerFor]="menu">Lista entiteta</button>
-      <mat-menu #menu="matMenu">
+      <mat-menu #menu2="matMenu">
         <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaMarkiVozila">Lista Marke Vozila</a>
       
         <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKlasaVozila">Lista Klase Vozila</a>
