--- a/AgentAppFront/src/app/components/register/register.component.css
+++ b/AgentAppFront/src/app/components/register/register.component.css
@@ -17,7 +17,8 @@
   }    
   .main-div {
     height: 50vh;
-    padding-top: 10%;
+    flex-shrink: 6;
+    padding-top: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
