--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -4,21 +4,21 @@
 <span>
      
 
-      <button class="dugmeKreiraj"  mat-button [matMenuTriggerFor]="menu">Kreiraj entitet</button>
-      <mat-menu #menu="matMenu">
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/markaVozila">Dodaj Marku Vozila</a>
+      <button class="dugmeKreiraj"  mat-button [matMenuTriggerFor]="menu1">Kreiraj entitet</button>
+      <mat-menu #menu1="matMenu">
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/markaVozila">Kreiraj Marku Vozila</a>
       
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/klasaVozila">Dodaj Klasu Vozila</a>
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/klasaVozila">Kreiraj Klasu Vozila</a>
         
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/modelVozila">Dodaj Model Vozila</a>
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/modelVozila">Kreiraj Model Vozila</a>
   
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/gorivoVozila">Dodaj Tip Goriva</a>
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/gorivoVozila">Kreiraj Tip Goriva</a>
   
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/menjacVozila">Dodaj Vrstu Menjaca</a>
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/menjacVozila">Kreiraj Vrstu Menjaca</a>
       </mat-menu>
 
 
-      <button class="dugmeLista"  mat-button [matMenuTriggerFor]="menu">Lista entiteta</button>
+      <button class="dugmeLista"  mat-button [matMenuTriggerFor]="menu2">Lista entiteta</button>
       <mat-menu #menu2="matMenu">
         <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaMarkiVozila">Lista Marke Vozila</a>
       
