--- a/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
@@ -5,24 +5,38 @@
     </span>
 </mat-toolbar>
 
-<mat-card class="papper" style="width: 600px; height: 800;">
+<mat-card class="card-container" style="width: 1000px; height: 800; padding-top: 100px; margin-left: 400px;">
 
     <mat-card-header>
         <h3>Shopping Cart</h3>
     </mat-card-header>
 
-    <mat-card-content >
-        <mat-grid-list cols="2" rowHeight="2:1" >
-            <mat-grid-tile [rowspan]="4">
-                <mat-selection-list [style.overflow]="'auto'" [style.height.vh]="'60'" style="height: 600;" #simptomi class="scroll-me" [(ngModel)]="selectedOptions"
+    <mat-card-content class="card-container">
+        <mat-selection-list [style.overflow]="'auto'" [style.height.vh]="'60'" style="height: 600;"  class="scroll-me" [(ngModel)]="selectedOptions"
                     (ngModelChange)="onNgModelChange($event)">
+                    <!--{{zahtev.oglas.vozilo.user.firstname}} {{zahtev.povratak}}-->
                     <mat-list-option *ngFor="let zahtev of shopCartItems" [value]="zahtev">
-                        {{zahtev.oglas.vozilo.user.firstname}} {{zahtev.povratak}}
+                        <div>
+                            <div style="float: left;">
+                                <div style="float: left;">
+                                    Vlasnik: {{zahtev.oglas.vozilo.user.firstname}}
+                                </div>
+                                <div style="float: right; padding-left: 100px;">
+                                    Preuzimanje: {{zahtev.preuzimanje}}
+                                </div>
+                            </div>
+                            <div style="float: center;">
+                                <div style="float: left; padding-left: 10px;">
+                                    Povratak: {{zahtev.povratak}}
+                                </div>
+                                <div style="float: right; padding-left: 10px;">
+                                    <a routerLink="" routerLinkActive="active" (click)="onDetaljnije(zahtev)">Detaljnije</a>
+                                </div>
+                            </div>
+                        </div>
                     </mat-list-option>
                 </mat-selection-list>
-            </mat-grid-tile>
-        </mat-grid-list>
-        <button mat-raised-button color="primary" (click)="rezervisi()">Rezervisi</button>
+        <button mat-raised-button color="primary" [disabled]="isButtonDisabled || cartEmpty" (click)="rezervisi()">Rezervisi</button>
     </mat-card-content>
 
 </mat-card>
