--- a/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
@@ -41,12 +41,12 @@
 
                 <mat-form-field class="full-width">
                     <mat-label>Tip Goriva</mat-label>
-                    <input [(ngModel)]="oglas.vozilo.tipgoriva" matInput [ngModelOptions]="{standalone: true}" required disabled>
+                    <input [(ngModel)]="oglas.vozilo.tipGoriva" matInput [ngModelOptions]="{standalone: true}" required disabled>
                 </mat-form-field>
 
                 <mat-form-field class="full-width">
                     <mat-label>Vrsta Menjaca</mat-label>
-                    <input [(ngModel)]="oglas.vozilo.vrstamenjaca" matInput [ngModelOptions]="{standalone: true}" required disabled>
+                    <input [(ngModel)]="oglas.vozilo.vrstaMenjaca" matInput [ngModelOptions]="{standalone: true}" required disabled>
                 </mat-form-field>
 
                 <!-- ******************************************************************************************************* -->
@@ -85,7 +85,7 @@
 
             </mat-card-content>
             <button mat-raised-button color="primary" (click)="onRezervisi()"
-                [disabled]="!formControl.valid">Rezervisi</button>
+                [disabled]="isButtonDisabled">Rezervisi</button>
         </form>
     </mat-card>
 </div>
