--- a/ServisiFront/src/app/components/userComponent/agent/moja-vozila/moja-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/moja-vozila/moja-vozila.component.html
@@ -3,9 +3,62 @@
     <span class="nav-tool-items">
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
-  </mat-toolbar> 
+  </mat-toolbar>
+  
+  <mat-card>
+    <mat-card-header>
+      <h1>Moja Vozila</h1>
+    </mat-card-header>
+  <mat-card-content>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="voziloSource">
+  
+        <!-- Klasa Vozila -->
+        <ng-container matColumnDef="Klasa">
+          <th mat-header-cell *matHeaderCellDef> Klasa </th>
+          <td mat-cell *matCellDef="let element">{{element.klasaVozila}} </td>
+        </ng-container>
+        
+        <!-- Model Vozila -->
+        <ng-container matColumnDef="Model">
+          <th mat-header-cell *matHeaderCellDef> Model </th>
+          <td mat-cell *matCellDef="let element">{{element.modelVozila}} </td>
+        </ng-container>
 
-  <div style="padding:20px;margin-top:30px;">
+        <!-- Marka Vozila -->
+        <ng-container matColumnDef="Marka">
+          <th mat-header-cell *matHeaderCellDef> Marka </th>
+          <td mat-cell *matCellDef="let element">{{element.markaVozila}} </td>
+        </ng-container>
+
+        <!-- Predjeni kilometri -->
+        <ng-container matColumnDef="KM">
+          <th mat-header-cell *matHeaderCellDef> Kilometri </th>
+          <td mat-cell *matCellDef="let element">{{element.predjeniKm}} km</td>
+        </ng-container>
+  
+        <!-- Zauzmi Termin -->
+        <ng-container matColumnDef="Zauzece">
+            <th mat-header-cell *matHeaderCellDef> Rezervisi </th>
+            <td mat-cell *matCellDef="let element"> <button mat-button (click)="onUnesiZauzece(element)">Unesi Zauzece</button> </td>
+        </ng-container>
+
+        <!-- Zauzmi Termin -->
+        <ng-container matColumnDef="Detaljnije">
+          <th mat-header-cell *matHeaderCellDef> Detaljnije </th>
+          <td mat-cell *matCellDef="let element"> <button mat-button (click)="onDetaljnije(element)">Pogledaj jos</button> </td>
+      </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+  
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+  </mat-card-content>
+  </mat-card>
+
+  <!-- <div style="padding:20px;margin-top:30px;">
     
     <p style="font-size: 18px;">Vozila:</p>
       <table mat-table [dataSource]="voziloSource" matSort class="mat-elevation-z8">
@@ -35,4 +88,4 @@
       </table>
   
       <router-outlet></router-outlet>
-  </div>
+  </div> -->
