--- a/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
@@ -6,20 +6,20 @@
     </span>
 </mat-toolbar>  
 
-<mat-card style="margin-top: 80px;margin-left: 30%;">
+<mat-card style="margin-top: 80px;margin-left: 25%;margin-right: 35%;">
     <mat-card-header >
         <mat-card-title>Moji Zahtevi</mat-card-title>
     </mat-card-header>
 
     <mat-card-content style="width: 500px;">
-        <mat-card *ngFor="let data of zahtevi" style="width: 100%;height: 100%;margin-top: 10%;">
+        <mat-card *ngFor="let data of zahtevi" style="width: 100%;height: 100%;margin-top: 10%;background-color: lavender;">
             <mat-card-header>
-                <mat-card-title style="border-style: outset;">
+                <mat-card-title style="border-style: outset;background-color: rgb(189, 226, 247);">
                   <p>Korisnik: {{data.bundleZahtevi[0].oglas.vozilo.user.username}}</p>
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content >
-                <div *ngFor="let zahtev of data.bundleZahtevi" style="height: 100%;;border-style: outset; background-color:gainsboro;">
+                <div *ngFor="let zahtev of data.bundleZahtevi" style="height: 100%;;border-style: outset; background-color:rgb(198, 192, 233);">
                     <p> <span style="padding-right: 10px;">Sifra vozila:</span> {{zahtev.oglas.vozilo.id}} </p>
                     <p> <span style="padding-right: 10px;">Marka vozila:</span> {{zahtev.oglas.vozilo.markaVozila}} </p>
                     <p> <span style="padding-right: 10px;">Model vozila:</span> {{zahtev.oglas.vozilo.modelVozila}} </p>
