--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary" class="app-header">
   <div><a href="/" class="navlogo">Rent-A-Car Korisnik</a></div>
   <span class="nav-tool-items">
+    <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
+    <a mat-button mat-raised-button routerLink="/svaVozila" routerLinkActive="active" (click)="sva()">Sva vozila</a>
     <a mat-button mat-raised-button routerLink="/cart" routerLinkActive="active" (click)="shopCart()">Shopping Cart</a>
     <a mat-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
   </span>
