--- a/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/agent" class="navlogo">Rent-A-Car Agent</a></div>
     <span class="nav-tool-items">
-      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja Vozila</a>
-      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+        <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onUnesiIzvestaj()">Unesi Izvestaj</a>
+        <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja Vozila</a>
+        <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
 </mat-toolbar>  
 
@@ -11,7 +12,7 @@
         <mat-card-title>Moji Zahtevi</mat-card-title>
     </mat-card-header>
 
-    <mat-card-content style="width: 500px;">
+    <mat-card-content style="width: 100%;">
         <mat-card *ngFor="let data of zahtevi" style="width: 100%;height: 100%;margin-top: 10%;background-color: lavender;">
             <mat-card-header>
                 <mat-card-title style="border-style: outset;background-color: rgb(189, 226, 247);">
