Sredjivanje agentske aplikacije i kreiranje izvestaja

--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -53,7 +53,7 @@
               </mat-grid-tile>
               <mat-grid-tile [colspan]="5" [rowspan]="1">
                 <button mat-raised-button color="primary" style="border-radius: 10px;"
-                  (click)="onRezervisi(element)">Rezervisi</button>
+                  (click)="onRezervisi(oglas)">Rezervisi</button>
               </mat-grid-tile>
 
               <mat-grid-tile [colspan]="5" [rowspan]="1">
