--- a/ServisiFront/src/app/components/userComponent/vrsta-menjaca/vrsta-menjaca.component.html
+++ b/ServisiFront/src/app/components/userComponent/vrsta-menjaca/vrsta-menjaca.component.html
@@ -21,7 +21,7 @@
         
         </mat-card-content>
         
-        <button mat-stroked-button class="buttonPotvrdi" type="submit">Potvrdi</button>
+        <button mat-stroked-button class="btn btn-success m-1" (click)="alertService.success('Uspesno ste kreirali vrstu menjaca!!', options)" class="buttonPotvrdi" type="submit">Potvrdi</button>
   
       </form>
     </mat-card>
