--- a/AgentAppFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
+++ b/AgentAppFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
@@ -18,7 +18,7 @@
         </mat-card-content>
         <select id="markaVozila" [(ngModel)]="modelVozila.id_marke" [ngModelOptions]="{standalone: true}" class="form-control">
             <option value=""></option>
-            <option *ngFor="let m of marke$ | async" >
+            <option *ngFor="let m of marke$ | async" value="{{m.naziv}}">
                 {{ m.naziv }}
             </option>
         </select>   
