--- a/ServisiFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
@@ -16,9 +16,9 @@
               <input matInput placeholder="Naziv modela vozila" [(ngModel)]="modelVozila.naziv" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
         </mat-card-content>
-        <select id="markaVozila" [(ngModel)]="modelVozila.id_marke" [ngModelOptions]="{standalone: true}" class="form-control">
+        <select id="markaVozila"  [(ngModel)]="modelVozila.id_marke" [ngModelOptions]="{standalone: true}" class="form-control">
             <option value=""></option>
-            <option *ngFor="let m of marke$ | async" >
+            <option *ngFor="let m of marke$ | async" value="{{m.naziv}}" >
                 {{ m.naziv }}
             </option>
         </select>   
