--- a/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.html
@@ -8,15 +8,15 @@
   
         <mat-card-content>
           <mat-form-field class="full-width">
-            <input matInput placeholder="Mesto" [(ngModel)]="oglas.mesto" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Mesto" maxlength="40" [(ngModel)]="oglas.mesto" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
 
           <mat-form-field class="full-width">
-            <input matInput placeholder="Cena" [(ngModel)]="oglas.cena" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Cena" maxlength="30" [(ngModel)]="oglas.cena" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
         
           <mat-form-field class="full-width">
-            <input matInput placeholder="Popust" [(ngModel)]="oglas.popust" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Popust" maxlength="10" [(ngModel)]="oglas.popust" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
   
           <mat-form-field>
