--- a/AgentAppFront/src/app/components/userComponent/komentar-forma/komentar-forma.component.html
+++ b/AgentAppFront/src/app/components/userComponent/komentar-forma/komentar-forma.component.html
@@ -4,7 +4,7 @@
 
 <form (submit)="onSubmit()">
 
-    <textarea ng-Model="komentar.sadrzaj" rows="4" cols="50" placeholder="Vas komentar je: " required>
+    <textarea ng-Model="komentar.sadrzaj" rows="4" cols="50" maxlength="300" placeholder="Vas komentar je: " required>
       
       </textarea>
 
