--- a/AgentAppFront/src/app/components/novo-vozilo/novo-vozilo.component.html
+++ b/AgentAppFront/src/app/components/novo-vozilo/novo-vozilo.component.html
@@ -73,11 +73,11 @@
         </select>   
 
           <mat-form-field class="full-width">
-            <input matInput placeholder="Predjni kilometri" [(ngModel)]="vozilo.predjeniKm" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Predjni kilometri" [(ngModel)]="vozilo.predjeniKm" maxlength="50" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
 
           <mat-form-field class="full-width">
-            <input matInput placeholder="Broj sedista za decu" [(ngModel)]="vozilo.brsedistadeca" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Broj sedista za decu" [(ngModel)]="vozilo.brsedistadeca" maxlength="10" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
   
           <!--upload slike odavde-->
