--- a/AgentAppFront/src/app/components/userComponent/klasa-vozila/izmena-klase-vozila/izmena-klase-vozila.component.html
+++ b/AgentAppFront/src/app/components/userComponent/klasa-vozila/izmena-klase-vozila/izmena-klase-vozila.component.html
@@ -13,7 +13,7 @@
     
           <mat-card-content>
             <mat-form-field class="full-width">
-              <input matInput placeholder="Naziv klase vozila" [(ngModel)]="klasaVozila.naziv" [ngModelOptions]="{standalone: true}" required>
+              <input matInput placeholder="Naziv klase vozila" maxlength="30" [(ngModel)]="klasaVozila.naziv" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
   
           
