--- a/ServisiFront/src/app/components/userComponent/marka-vozila/marka-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/marka-vozila/marka-vozila.component.html
@@ -13,7 +13,7 @@
   
         <mat-card-content>
           <mat-form-field class="full-width">
-            <input matInput placeholder="Naziv marke vozila" [(ngModel)]="markaVozila.naziv" [ngModelOptions]="{standalone: true}" required>
+            <input matInput placeholder="Naziv marke vozila" maxlength="30" [(ngModel)]="markaVozila.naziv" [ngModelOptions]="{standalone: true}" required>
           </mat-form-field>
 
         
