--- a/ServisiFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/model-vozila/izmena-modela-vozila/izmena-modela-vozila.component.html
@@ -13,7 +13,7 @@
     
           <mat-card-content>
             <mat-form-field class="full-width">
-              <input matInput placeholder="Naziv modela vozila" [(ngModel)]="modelVozila.naziv" [ngModelOptions]="{standalone: true}" required>
+              <input matInput placeholder="Naziv modela vozila" maxlength="30" [(ngModel)]="modelVozila.naziv" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
         </mat-card-content>
         <select id="markaVozila"  [(ngModel)]="modelVozila.id_marke" [ngModelOptions]="{standalone: true}" class="form-control">
