--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -1,5 +1,18 @@
 <mat-toolbar color="primary" class="app-header">
-  <div><a href="/" class="navlogo">Rent-A-Car Korisnik</a></div>
+  <div><a href="/" class="navlogo">Rent-A-Car Korisnik</a>
+    &nbsp;&nbsp;
+  
+    <button  class="dugmeLista" mat-button [matMenuTriggerFor]="menu3" >
+      <mat-icon>face</mat-icon>
+      Korisnik
+    </button>
+  <mat-menu #menu3="matMenu">
+    <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" (click)="openDialogLozinka()"><mat-icon>vpn_key</mat-icon>Promeni lozinku</a>
+  </mat-menu>
+  </div>
+
+  
+
   <span class="nav-tool-items">
     <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
     <a mat-button mat-raised-button routerLink="/svaVozila" routerLinkActive="active" (click)="sva()">Sva vozila</a>
