--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -7,7 +7,9 @@
       Korisnik
     </button>
   <mat-menu #menu3="matMenu">
+    <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" (click)="openDialogInfo()"><mat-icon>portrait</mat-icon>Informacije o korisniku</a>
     <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" (click)="openDialogLozinka()"><mat-icon>vpn_key</mat-icon>Promeni lozinku</a>
+
   </mat-menu>
   </div>
 
